<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The event-gift savior</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_export">Export all data to file</string>
    <string name="action_export_current_profile">Share/Export current profile</string>
    
    <string name="action_import">Import data from file</string>
    <string name="action_add_person">Add Person</string>
    <string name="action_add_info">Add info</string>
    <string name="action_add_date">Add event</string>
    <string name="action_calendar">Go to events</string>
    <string name="edit_message">Change data..</string>
    <string name="button_send">Save</string>
    
    <string name="shoe_string">Shoe Size: </string>
    <string name="ring_string">Ring Size: </string>
    
    <string name="helpString0">Welcome to the app, Slide to go on to more hints. First add a new person.</string>
    <string name="helpString1">Add some information, A name and the info.</string>
    <string name="helpString2">Add some events, A name and tab on the date.</string>
    <string name="helpString3">Shift between persons by the top drop down list.</string>
    <string name="helpString4">Change dates and info by touching the element to change.</string>
    <string name="helpString5">Use the upcoming event view to get an overview. </string>
 	<string name="helpString6">Delete or rename persons, events or info by long press. </string>
    
     
</resources>
