<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    
    <item
        android:id="@+id/action_export"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/action_export"/>
    
        <item
        android:id="@+id/action_export_current_profile"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_export_current_profile"/>
    
    
    <item
        android:id="@+id/action_import"
        android:orderInCategory="96"
        android:showAsAction="never"
        android:title="@string/action_import"/>
    
    <item android:id="@+id/action_add_person"
          android:icon="@drawable/ic_action_add_person"
          android:showAsAction="always"
          android:title="@string/action_add_person"/>
        
    <item android:id="@+id/action_add_info"
          android:icon="@drawable/ic_action_new_label"
          android:showAsAction="always"
          android:title="@string/action_add_info"/>
    
    <item android:id="@+id/action_add_date"
          android:icon="@drawable/ic_action_event_add"
          android:showAsAction="always" 
          android:title="@string/action_add_date"/>
    
    <item android:id="@+id/action_calendar" 
          android:icon="@drawable/ic_action_go_to_today" 
          android:showAsAction="always" 
          android:title="@string/action_calendar" />
    
    
        

</menu>
